# teradata-etl-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SSH-SETUP.md  build_wheel.py  connections.yaml.example  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml
scripts/: check_airbyte_health.py  check_env.py  create_airbyte_workspace.py  install-hooks.sh  live_airbyte_flow.py  run_create_intelligent_airbyte_pipeline.py
src/elt_mcp_server/: __init__.py  __main__.py  client_factory.py  config.py  credential_resolver.py  main.py  orchestrator.py  response_sanitizer.py  server.py  server_middleware.py
src/elt_mcp_server/auth/: resolver.py
src/elt_mcp_server/clients/: airbyte_client.py
src/elt_mcp_server/generators/: airflow_tdload_dag_generator.py  dbt_generator.py
src/elt_mcp_server/storage/: metadata_store.py
src/elt_mcp_server/tools/: airflow_pipeline_management.py  data_movement.py  metadata_discovery.py  orchestration_execution.py  ttu_tools.py  utils.py
src/elt_mcp_server/utils/: audit_logger.py  circuit_breaker.py  file_operations.py  tls.py
src/elt_mcp_server/workflow/: __init__.py  airflow_orchestrator.py  protocol.py
src/teradata_etl_mcp_server/: __init__.py  __main__.py  config.py  main.py  orchestrator.py  server.py
src/teradata_etl_mcp_server/auth/: __init__.py  teradata_auth.py
src/teradata_etl_mcp_server/clients/: async_airflow_client.py  dbt_client.py  teradata_client.py  ttu_client.py
src/teradata_etl_mcp_server/generators/: airflow_dag_generator.py  escaping.py
src/teradata_etl_mcp_server/tools/: airflow_pipeline_management.py  connection_profiles.py  dbt_management.py
src/teradata_etl_mcp_server/utils/: audit_logger.py  circuit_breaker.py  csv_analyzer.py  validators.py
src/teradata_etl_mcp_server/workflow/: __init__.py  airflow_orchestrator.py  protocol.py
tests/: conftest.py
tests/integration/: test_airbyte_teradata_integration.py  test_airflow_client_live.py  test_airflow_orchestration.py  test_async_airflow_client_live.py  test_dbt_generator_integration.py  test_dbt_teradata_integration.py  test_end_to_end_pipeline.py  test_multi_source_data_movement.py  test_workflow_orchestrator_integration.py
tests/unit/: mock_client_factory.py  test_airbyte_client.py  test_airflow_dag_generator.py  test_airflow_orchestrator.py  test_airflow_pipeline_management_tools.py  test_airflow_tdload_dag_generator.py  test_async_airflow_client.py  test_auth_resolver.py  test_client_factory.py  test_config.py  test_connection_profile_tools.py  test_credential_resolver.py  test_csv_analyzer.py  test_data_movement_tools.py  test_dbt_client.py  test_dbt_generator.py  test_dbt_management_tools.py  test_escaping.py  test_file_operations.py  test_metadata_discovery_tools.py  test_metadata_store.py  test_multi_auth.py  test_orchestration_execution_tools.py  test_orchestrator.py  test_response_sanitizer.py  test_server.py  test_server_middleware.py  test_teradata_auth.py  test_teradata_client.py  test_tls.py  test_ttu_client.py  test_ttu_tools.py  test_validators.py  test_workflow.py  test_workflow_protocol.py  test_workspace_settings.py
